# rostree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-library.yml  ci.yml  publish.yml
docs/: README.md  dependency-trees.md  development.md  overview.md  package-discovery.md  review.md  roadmap.md  usage.md
rosdep_viz_webapp/: README.md
rosdep_viz_webapp/backend/: README.md  pyproject.toml
rosdep_viz_webapp/backend/app/: __init__.py  main.py
rosdep_viz_webapp/backend/tests/: test_api.py
rosdep_viz_webapp/frontend/: index.html  package.json  tailwind.config.js
rosdep_viz_webapp/frontend/src/: App.tsx  DependencyGraph.tsx  PackageSelector.tsx  index.css  types.ts
src/rosdep_viz/: __init__.py  api.py
src/rosdep_viz/core/: __init__.py  finder.py  parser.py  tree.py
src/rosdep_viz/tui/: __init__.py  app.py
src/rostree/: __init__.py  api.py  cli.py
src/rostree/core/: __init__.py  finder.py  parser.py  tree.py
src/rostree/tui/: app.py
tests/: __init__.py  test_api.py  test_cli.py  test_finder.py  test_parser.py  test_tree.py  test_tui_utils.py
