[project]
name = "rostree"
version = "0.2.2"
description = "Explore ROS 2 package dependencies from the command line (CLI, TUI, library)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rostree contributors" }]
keywords = ["ros2", "ros", "dependencies", "visualization", "tui", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: Console",
]
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
viz = [
    "networkx>=3.0",
    "matplotlib>=3.7",
]
dev = [
    "black==25.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
rostree = "rostree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rostree"]

[tool.hatch.build.targets.sdist]
include = ["src/rostree"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
